--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.4.7",
     "inquirer": "^8.2.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.0"
+    "mongoose": "^8.9.0",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
