--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon src/index.js",
     "rflect": "./src/index.js"
   },
-  "keywords": [],
+  "keywords": ["cli", "journaling", "reflection", "mindfulness", "diary", "writing", "gratitude", "guided writing", "guided reflections", "terminal journal", "cli tool", "daily-journal", "self-improvement"],
   "author": {
     "name": "Aniqa",
     "email": "hello@aniqa.io",
@@ -25,8 +25,7 @@
     "dotenv": "^16.4.7",
     "inquirer": "^8.2.4",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.0",
-    "ora": "^5.4.1"
+    "mongoose": "^8.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
