--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "email": "hello@aniqa.dev",
     "url": "https://aniqa.dev"
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
