--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "email": "hello@aniqa.dev",
     "url": "https://aniqa.dev"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aniqatc/rflect.git"
+  },
+  "bugs": {
+    "url": "https://github.com/aniqatc/rflect/issues"
+  },
   "engines": {
     "node": ">=12.0.0"
   },
