postinstall script to create initial dir & config.json for users (for offline tracking)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "rflect": "src/index.js"
   },
   "scripts": {
-    "postinstall": "node scripts/install.js",
+    "postinstall": "node src/scripts/install.js",
     "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
