--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "calendar-js": "^1.4.4",
     "chalk": "^4.1.2",
     "commander": "^9.4.1",
     "date-fns": "^4.1.0",
