--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest",
+    "test:write": "jest tests/commands/write.test.js"
   },
   "keywords": [
     "cli",
@@ -58,6 +60,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.7.0",
     "prettier": "^2.4.1"
   }
 }
